Se añaden cambios y casi se finaliza el sprint 2

--- a/index.html
+++ b/index.html
@@ -32,12 +32,11 @@
             <div class="formulario__registro__contenidos">
                 <label for="tipoDocumentoUsuario">Tipo de documento</label>
                 <select name="tipoDocumentoUsuario" class="dimensiones__inputs" id="tipoDocumentoUsuario">
-                    <option value="cedulaCiudadania">Cédula de Ciudadania</option>
-                    <option value="tarjetaIdentidad">Tarjeta de Identidad</option>
-                    <option value="cedulaExtranjeria">Cédula de Extranjería</option>
-                    <option value="pasaporte">Pasaporte</option>
-                    <option value="tarjetaResidencia">Tarjeta de Residencia</option>
-                    <option value="permisoEspecialPermanencia">Permiso Especial de Permanencia</option>
+                    <option value="Cédula de Ciudadanía">Cédula de Ciudadanía</option>
+                    <option value="Tarjeta de Identidad">Tarjeta de Identidad</option>
+                    <option value="Cédula Extranjeria">Cédula de Extranjería</option>
+                    <option value="Pasaporte">Pasaporte</option>
+                    <option value="Permiso Especial Permanencia">Permiso Especial de Permanencia</option>
                 </select>
             </div>
 
@@ -56,7 +55,8 @@
                 <input type="password" name="contrasenaUsuario" class="dimensiones__inputs" id="contrasenaUsuario" placeholder="Digite su contraseña aquí..." required>
             </div>
 
-            <button type="submit" class="boton__registrar" id="btn-registrar">Registrar</button>
+            <button type="button"  class="boton__registrar" id="btn-registrar">Registrar</button>
+            <!--type="submit"-->
 
         </div>
     </form>
@@ -72,6 +72,7 @@
 
     <!-- LLAMAMOS AL ARCHIVO JAVASCRIPT form.js -->
     <script src="./JS/form.js"></script>
+    <!--<script src="./JS/captura_datos_sprint2.js"></script>-->
 
 
 </body>
