Se modifica el index.html y el form.js

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 <select name="tipoDocumentoUsuario" class="dimensiones__inputs" id="tipoDocumentoUsuario">
                     <option value="Cédula de Ciudadanía">Cédula de Ciudadanía</option>
                     <option value="Tarjeta de Identidad">Tarjeta de Identidad</option>
-                    <option value="Cédula Extranjeria">Cédula de Extranjería</option>
-                    <option value="Pasaporte">Pasaporte</option>
-                    <option value="Permiso Especial Permanencia">Permiso Especial de Permanencia</option>
+                    <option value="Cédula de Extranjeria">Cédula de Extranjería</option>
+                    <option value="PermisoEspecialPermanencia">Permiso Especial de Permanencia</option>
+                    <!--<option value="Pasaporte">Pasaporte</option>-->
                 </select>
             </div>
 
